# fugux-hasking

./: README.md  article-site-gen.cabal
content/: acme-relayd-httpd-obsd-static.md  golang-concurreny-applied.md  test.md
src/: .#Types.h  Article.hs  GlobalHelpers.hs  Main.hs  Site.hs  Types.hs
