cabal-version:       3.6
name:                article-site-gen
version:             0.1.0.0
build-type:          Simple
license:             BSD-2-Clause
author:              Joao G. 
synopsis:            Generate HTML articles from Markdown
category:            Web

executable article-site-gen
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , text
                     , directory
                     , filepath
                     , time
                     , parsec
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010
  other-modules:       Article
                      , Site
